# ecom-system-master

./: .gitignore  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  add_watermark.py  app.py  app_gui.py  bulk_compressor.py  camera_handler.py  camera_utils.py  config.py  database.py  game_scanner.py  install_camera_support.bat  run_gui.bat  run_web.bat  settings.json.example  settings_manager.py  tmpclaude-ccef-cwd  video_compressor.py
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
ecom-flutter/: pubspec.yaml
ecom-flutter/installer/: setup.iss
ecom-flutter/integration_test/: camera_frame_tap_test.dart  (+1 more)
ecom-mobile/: .gitignore  README.md  SPIKE_RESULTS.md  pubspec.yaml
ecom-py/: README.md  barcode_handler.py  build_compressor.py  build_exe.bat  camera_utils.py  implementation.md  install.bat  install_tkcalendar.bat  pyproject.toml  requirements.txt  settings_manager.py  video_compressor.py
ecom-qt6/: CMakeLists.txt
ecom-qt6/src/: main.cpp
ecom-qt6/src/core/: BarcodeHandler.cpp  BarcodeHandler.h  CameraHandler.cpp  CameraHandler.h  CameraUtils.cpp  CameraUtils.h  Database.cpp  Database.h  SettingsManager.cpp  SettingsManager.h  VideoCompressor.cpp  VideoCompressor.h
ecom-qt6/src/resources/: style.qss
ecom-qt6/src/ui/: MainWindow.cpp  MainWindow.h  SavingProgressDialog.cpp  SavingProgressDialog.h  SearchDialog.cpp  SearchDialog.h  SettingsDialog.cpp  SettingsDialog.h
templates/: index.html
(+99 files in other folders)
